# Eduardo-de-Oliveira-Pereira-Ferreira

./: README.md
CrewAI/CrewAI/bloggeneration/: README.md  pyproject.toml  requirements.txt
CrewAI/CrewAI/bloggeneration/src/bloggeneration/config/: agents.yaml  tasks.yaml
CrewAI/CrewAI/bloggeneration/src/bloggeneration/tools/: ReadPDFTool.py
CrewAI/CrewAI/markdowns/: A Poluição dos Oceanos e Seus Impactos.md  IA.md  Nuclear.md
CrewAI/bloggeneration/: README.md
CrewAI/bloggeneration/src/bloggeneration/: crew.py  main.py
CrewAI/bloggeneration/src/bloggeneration/config/: agents.yaml  tasks.yaml
CrewAI/bloggeneration/src/bloggeneration/tools/: ler_pdftool.py
