[project]
name = "bloggeneration"
version = "0.1.0"
description = "BlogGeneration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
bloggeneration = "bloggeneration.main:run"
run_crew = "bloggeneration.main:run"
train = "bloggeneration.main:train"
replay = "bloggeneration.main:replay"
test = "bloggeneration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
